Cilium/002-test-pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: client-allowed
  labels:
    role: dev
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: client-blocked
  labels:
    role: guest
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "3600"]
