Cilium/003-policy-L3L4.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-dev-only
spec:
  description: "فقط پادهای role=dev به nginx وصل شوند"
  endpointSelector:
    matchLabels:
      app: nginx
  ingress:
  - fromEndpoints:
    - matchLabels:
        role: dev
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP

#root@master:~# kubectl exec client-allowed -- curl -s --max-time 5 -o /dev/null -w "HTTP:%{http_code}\n" nginx.default.svc.cluster.local
#HTTP:200
#root@master:~# kubectl exec client-blocked -- curl -s --max-time 5 -o /dev/null -w "HTTP:%{http_code}\n" nginx.default.svc.cluster.local
#HTTP:000
#command terminated with exit code 28
