Cilium/004-policy-L7.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-dev-only
spec:
  description: "role=dev فقط به مسیر / دسترسی دارد، نه /admin.html"
  endpointSelector:
    matchLabels:
      app: nginx
  ingress:
  - fromEndpoints:
    - matchLabels:
        role: dev
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "^/$"
#root@master:~# kubectl exec client-allowed -- curl -s --max-time 5 -o /dev/null -w "HTTP:%{http_code}\n" nginx.default.svc.cluster.local/
#HTTP:200
#root@master:~# kubectl exec client-allowed -- curl -s --max-time 5 -o /dev/null -w "HTTP:%{http_code}\n" nginx.default.svc.cluster.local/admin.html
#HTTP:403
